Fixing spacing on intelligence slider.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -4920,13 +4920,13 @@ form.opml_import_form input {
     margin: -1px 5px -1px 0px;
 }
 .NB-narrow .NB-intelligence-slider .NB-intelligence-slider-green img {
-    margin: 1px 8px 2px;
+    margin: 1px 6px 2px;
 }
 .NB-narrow .NB-intelligence-slider .NB-intelligence-slider-blue img {
-    margin: 1px 8px 2px;
+    margin: -1px 4px 0px;
 }
 .NB-extra-narrow .NB-intelligence-slider .NB-intelligence-slider-yellow img {
-    margin: 1px 8px 2px;
+    margin: 1px 6px 2px;
 }
 
 /* ===================== */
